# quicknote

./: .gitignore  .pre-commit-config.yaml  .spec  LICENSE  QuickNote.spec  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml  ci.yml
installer/: quicknote.iss
scripts/: make_version_info.py
src/quicknote/: const.py  main.py
src/quicknote/lib/: app_settings.py  database.py  icon_manager.py  models.py  signals.py  window.py
tests/: conftest.py  test_app_settings.py  test_database.py  test_models.py
