[project]
name = "quicknote"
version = "1.0.0"
description = "A minimal, always-available notepad for Windows."
authors = [
    {name = "Himansu",email = "himansu9805@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "PySide6 (>=6.11.1)",
    "keyboard (>=0.13.5)",
    "pydantic (>=2.13.4,<3.0.0)"
]


[dependency-groups]
dev = [
    "pytest (>=8.0.0)",
    "pre-commit (>=4.0.0)",
    "mypy (>=1.15.0)",
    "ruff (>=0.9.6)",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
src = ["src"]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",   # line-too-long — long strings can't always be wrapped
    "B018",   # useless-expression — raised on Sphinx attribute docstrings
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]   # assert statements are expected in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.13"
ignore_missing_imports = true
warn_unused_configs = true
strict_equality = true
check_untyped_defs = true
no_implicit_reexport = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
